--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   }
   
   .navbar.scrolling-active {
-    background-color: #0B81B4;
+    background-color: #154053;;
     padding: 30px 0 30px 0;
   }
   
@@ -67,7 +67,7 @@
   }
   
   .navbar .box-navbar .menu li a:hover {
-    background-color: #0B81B4;
+    background-color: #154053;;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -116,7 +116,7 @@
     text-decoration: none;
     width: 180px;
     height: 50px;
-    background-color: #0B81B4;
+    background-color: #154053;;
     font-weight: bold;
     color: rgb(255, 255, 255);
     border: none;
@@ -130,7 +130,7 @@
   
   
   .hero .box-hero .box:nth-child(1) button:hover {
-    background-color: #0B81B4;
+    background-color: #154053;;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -148,7 +148,7 @@
     align-items: center;
     margin-top: 100px;
     padding: 20px;
-    border: 3px solid #0B81B4;
+    border: 3px solid #154053;;
     border-radius: 20px;
   
   }
@@ -215,7 +215,7 @@
   .services .box-services .box i {
     font-size: 40px;
     margin-bottom: 10px;
-    color: #0B81B4;
+    color: #154053;;
   }
   
   .services .box-services .box p {
@@ -276,7 +276,7 @@
     width: 120px;
     height: 40px;
     border: none;
-    background-color: #0B81B4;
+    background-color: #154053;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -288,7 +288,7 @@
   }
   
   .artikel .box-artikel .box button:hover {
-    background-color: #0B81B4;
+    background-color: #154053;;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -362,7 +362,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-    background-color: #0B81B4;
+    background-color: #154053;;
     color: white;
     padding-inline: 10px;
   }
@@ -375,7 +375,7 @@
   
   .footer {
     padding: 50px 0 50px 0;
-    background-color: #0B81B4;
+    background-color: #154053;
   }
   
   .footer .box-footer {
@@ -451,7 +451,7 @@
       -moz-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
-      background-color: #0B81B4;
+      background-color: #154053;
     }
   
     .navbar .box-navbar .menu.menu-active {
