--- a/css/artikel1.css
+++ b/css/artikel1.css
@@ -36,7 +36,7 @@ z-index: 9999;
 }
 
 .navbar.scrolling-active {
-background-color: #0B81B4;
+background-color: #154053;
 padding: 30px 0 30px 0;
 }
 
@@ -67,7 +67,7 @@ padding: 10px 15px 10px 15px;
 }
 
 .navbar .box-navbar .menu li a:hover {
-background-color: #0B81B4;
+background-color: #154053;
 transition: all 0.3s ease;
 -webkit-transition: all 0.3s ease;
 -moz-transition: all 0.3s ease;
@@ -116,7 +116,7 @@ font-weight: 100;
   text-decoration: none;
   width: 180px;
   height: 50px;
-  background-color: #0B81B4;
+  background-color: #154053;
   font-weight: bold;
   color: rgb(255, 255, 255);
   border: none;
@@ -129,7 +129,7 @@ font-weight: 100;
 }
 
 .hero .box-hero .box:nth-child(1) button:hover {
-  background-color: #0B81B4;
+  background-color: #154053;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -235,7 +235,7 @@ p {
   width: 120px;
   height: 40px;
   border: none;
-  background-color: #0B81B4;
+  background-color: #154053;
   color: white;
   font-weight: bold;
   border-radius: 5px;
@@ -247,7 +247,7 @@ p {
 }
 
 .artikel .box-artikel .box button:hover {
-  background-color: #0B81B4;
+  background-color: #154053;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -269,7 +269,7 @@ button a {
 
 .footer {
   padding: 50px 0 50px 0;
-  background-color: #0B81B4;
+  background-color: #154053;
 }
 
 .footer .box-footer {
@@ -345,7 +345,7 @@ button a {
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
-    background-color: #0B81B4;
+    background-color: #154053;
   }
 
   .navbar .box-navbar .menu.menu-active {
