--- a/login/style.css
+++ b/login/style.css
@@ -8,6 +8,66 @@ body ,html {
     font-weight: 700;
 }
 
+.container-navbar {
+    width: 80%;
+    margin-inline: auto;
+}
+
+.navbar {
+    background-color: #333333;
+    padding: 20px 0 20px 0;
+    position: fixed;
+    width: 100%;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3 ease;
+    -moz-transition: all 0.3 ease;
+    -ms-transition: all 0.3 ease;
+    z-index: 9999;
+}
+
+.navbar .scrolling-active {
+    background-color: #154053;
+    padding: 30px 0 30px 0;
+}
+
+.navbar .box-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar .box-navbar .logo h1 {
+    font-weight: 700;
+    color: white;
+    font-size: 24px;
+}
+
+.navbar .box-navbar .menu {
+    display: flex;
+    column-gap: 20px;
+}
+
+.navbar .box-navbar .menu li {
+    list-style-type: none;
+}
+
+.navbar .box-navbar .menu li a {
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
+    padding: 10px 15px 10px 15px;
+}
+
+.navbar .box-navbar .menu li a:hover {
+    background-color: #154053;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+
 .container {
     display: flex;
     height: 100%;
@@ -23,7 +83,7 @@ body ,html {
     border: none;
 }
 
-input[type="email"],
+input[type="username"],
 input[type="password"] {
     border-radius: 32px;
     border: 2px solid rgb(224, 224, 224);
