--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   }
   
   .navbar.scrolling-active {
-    background-color: #154053;;
+    background-color: #154053;
     padding: 30px 0 30px 0;
   }
   
@@ -67,7 +67,7 @@
   }
   
   .navbar .box-navbar .menu li a:hover {
-    background-color: #154053;;
+    background-color: #154053;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -116,7 +116,7 @@
     text-decoration: none;
     width: 180px;
     height: 50px;
-    background-color: #154053;;
+    background-color: #1e4b5e;
     font-weight: bold;
     color: rgb(255, 255, 255);
     border: none;
@@ -130,7 +130,7 @@
   
   
   .hero .box-hero .box:nth-child(1) button:hover {
-    background-color: #154053;;
+    background-color: #1b4455;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -142,20 +142,23 @@
     width: 100%;
   }
   
+
+
+
+
   form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-top: 100px;
     padding: 20px;
-    border: 3px solid #154053;;
-    border-radius: 20px;
+    border: 3px solid #154053;
+    border-radius: 10px;
   
   }
   
   input {
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     width: 100%;
     box-sizing: border-box;
     border: 2px solid #d2d2d2;
@@ -167,9 +170,22 @@
     margin-bottom: 10px;
   }
   
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  
   button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #419e44;
     color: white;
     border: none;
     border-radius: 5px;
@@ -178,18 +194,48 @@
   }
   
   button:hover {
-    background-color: #3e8e41;
+    background-color: #3a863c;
   }
   
-  #check {
-    margin-top: 10px;
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
   }
   
-  #warning {
-    color: red;
+  .modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 50px 40px;
+    border: 1px solid #888;
+    width: 40%;
+    border-radius: 15px;
+    text-align: center;
+    color: #386c83;
+    
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
     font-weight: bold;
-    margin-top: 10px;
   }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
   
   .services {
     width: 100%;
@@ -215,18 +261,13 @@
   .services .box-services .box i {
     font-size: 40px;
     margin-bottom: 10px;
-    color: #154053;;
+    color: #0B81B4;
   }
   
   .services .box-services .box p {
     font-weight: 100;
   }
   
-  .paragraf {
-    text-align: center;
-    margin-top:50px;
-  }
-
   .artikel {
     padding: 50px 0 50px 0;
   }
@@ -288,25 +329,13 @@
   }
   
   .artikel .box-artikel .box button:hover {
-    background-color: #154053;;
+    background-color: #154053;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
   }
-
-  button {
-    border: none;
-    background-color: transparent;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  button a {
-    color: white;
-    text-decoration: none;
-  }  
   
   .contact {
     padding: 50px 0 100px 0;
@@ -352,29 +381,7 @@
     }
   }
   
-  .contact .box-contact button {
-    border: none;
-    min-width: 100px;
-    min-height: 40px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    cursor: pointer;
-    background-color: #154053;;
-    color: white;
-    padding-inline: 10px;
-  }
-  
-  .contact .box-contact button i {
-    font-size: 16px;
-    font-weight: bold;
-    margin-inline: 5px;
-  }
-  
-  
-  .footer {
+footer {
     position: fixed;
     bottom: 0;
 }
@@ -399,6 +406,8 @@
     display: inline-block;
     vertical-align: top;
 }
+
+/* Footer left */
 
 .footer-distributed .footer-left {
     width: 30%;
@@ -436,6 +445,7 @@
     margin: 0;
 }
 
+/* Footer Center */
 
 .footer-distributed .footer-center {
     width: 35%;
@@ -479,6 +489,7 @@
     ;
 }
 
+/* Footer Right */
 
 .footer-distributed .footer-right {
     width: 30%;
@@ -538,6 +549,39 @@
         margin-left: 0;
     }
 }       
+
+  .contact .box-contact button {
+    border: none;
+    min-width: 100px;
+    min-height: 40px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+    background-color: #154053;
+    color: white;
+    padding-inline: 10px;
+  }
+  
+  .contact .box-contact button i {
+    font-size: 16px;
+    font-weight: bold;
+    margin-inline: 5px;
+  }
+  
+ 
+
+  
+
+
+  
+
+
+  
+
+
   
   @media screen and (max-width: 1200px) {
     .hero .box-hero .box:nth-child(1) button {
