--- a/css/login.css
+++ b/css/login.css
@@ -75,6 +75,12 @@ body ,html {
     justify-content: center;
 }
 
+.card-title,
+.card-subtitle {
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
 .login-form {
     height: 500px;
     width: 430px;
