--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,7 @@ body ,html {
 }
 
 .navbar {
-    background-color: #333333;
+    background-color: #154053;;
     padding: 20px 0 20px 0;
     position: fixed;
     width: 100%;
